feat: client libraries are now backwards compatible up to java 8